WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229830
[iOS 15] editing/caret/ios/caret-in-overflow-area.html is failing
https://bugs.webkit.org/show_bug.cgi?id=229830
Summary
[iOS 15] editing/caret/ios/caret-in-overflow-area.html is failing
Wenson Hsieh
Reported
2021-09-02 14:53:27 PDT
rdar://82190832
Attachments
Patch
(6.06 KB, patch)
2021-09-02 14:58 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-09-02 14:58:41 PDT
Created
attachment 437201
[details]
Patch
EWS
Comment 2
2021-09-03 06:55:18 PDT
Committed
r281989
(
241296@main
): <
https://commits.webkit.org/241296@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437201
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug